--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,6 +40,9 @@ jobs:
           release_name: Custom Ubuntu ISO v1.0.0
           draft: false
           prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: Upload ISO to release
         uses: actions/upload-release-asset@v1
