--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: # Allows manual trigger of the workflow
+  release:
+    types: [created]
+  workflow_dispatch:
 
 jobs:
   build-and-release-iso:
@@ -28,26 +30,31 @@ jobs:
         run: |
           wget -O ubuntu-22.04.4-desktop-amd64.iso https://releases.ubuntu.com/22.04.4/ubuntu-22.04.4-desktop-amd64.iso
 
+      - name: Determine ISO filename
+        id: get-filename
+        run: |
+          if [[ "${{ github.event_name }}" == "release" ]]; then
+            echo "FILENAME=borgerpc-amd64-${{ github.event.release.tag_name }}.iso" >> $GITHUB_ENV
+          else
+            echo "FILENAME=borgerpc-amd64-dev.iso" >> $GITHUB_ENV
+          fi
+
       - name: Build OS2borgerpc image
         run: |
-          cd image && ./build_os2borgerpc_image.sh ../ubuntu-22.04.4-desktop-amd64.iso borgerpc-amd64
+          cd image && ./build_os2borgerpc_image.sh ../ubuntu-22.04.4-desktop-amd64.iso $FILENAME
 
-      - name: Create a new release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Upload ISO as an artifact (for non-release events)
+        if: github.event_name != 'release'
+        uses: actions/upload-artifact@v3
         with:
-          tag_name: ${{ github.ref_name }} #v1.0.0 # You can dynamically set this with variables or inputs
-          release_name: Custom Ubuntu ISO v1.0.0
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: ${{ env.FILENAME }}
+          path: ./image/${{ env.FILENAME }}
 
-
-      - name: Upload ISO to release
+      - name: Upload ISO to release (only for release events)
+        if: github.event_name == 'release'
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./image/borgerpc-amd64.iso
-          asset_name: borgerpc-amd64.iso
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./image/${{ env.FILENAME }}
+          asset_name: ${{ env.FILENAME }}
           asset_content_type: application/octet-stream
