--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -56,6 +56,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ env.FILENAME }}.iso
-          asset_name: ${{ env.FILENAME }}
+          asset_path: ./image/${{ env.FILENAME }}.iso
+          asset_name: ${{ env.FILENAME }}.iso
           asset_content_type: application/octet-stream
